--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,8 @@
     tools:context="com.tapdevs.kotlin.views.activities.MainActivity">
 
     <FrameLayout
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        android:id="@+id/fragment_content" tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragment_content" />
 
 </android.support.constraint.ConstraintLayout>
